spade-tests/src/snapshots/spade_tests__typeinference__different_types_in_if.snap
---
source: spade-tests/src/typeinference.rs
assertion_line: 551
---
fn test(b: int<4>) -> int<8> {
    let a = if b == 4 { 3 } else { true };
    7
}


error: If branches have incompatible type
  ┌─ testinput:2:23
  │
2 │     let a = if b == 4 { 3 } else { true };
  │                       ^^^^^      ^^^^^^^^ But this one has type bool
  │                       │           
  │                       This branch has type int<_>
  │
  = Expected: int<_>
  =      Got: bool


